--- a/AcceptanceTests/appsettings.json
+++ b/AcceptanceTests/appsettings.json
@@ -7,17 +7,17 @@
     }
   },
   "UserCredentials": {
-    "Email": "someEmail@domain.com",
-    "Password": "secret"
+    "Email": "admin@timberyard.rbbn.com",
+    "Password": "Password123!"
   },
   "ServiceSettings": {
-    "Url": ""
+    "Url": "https://timberyard-api.sonusnet.com:5001/"
   },
   "DatabaseSettings": {
-    "ConnectionString": "persistsecurityinfo=True;database=Timberyard_Testing;SslMode=none",
-    "DbServer": "",
-    "DbPassword": "",
-    "DbUsername": ""
+    "ConnectionString": "Initial Catalog=Timberyard",
+    "DbServer": "ilpt-atebisql01",
+    "DbPassword": "timberyard_service",
+    "DbUsername": "timberyard_service"
   },
   "AllowedHosts": "*"
 }
