--- a/ETL/appsettings.json
+++ b/ETL/appsettings.json
@@ -11,10 +11,10 @@
     "DbUsername": ""
   },
   "UserCredentials": {
-    "Email": "someEmail@domain.com",
-    "Password": "secret"
+    "Email": "",
+    "Password": ""
   },
   "ServiceSettings": {
-    "Url": ""
+    "Url": "https://timberyard-api.sonusnet.com:5001/"
   }
 }
