--- a/WebService/WebService.csproj
+++ b/WebService/WebService.csproj
@@ -6,7 +6,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Tomer-University\ETL-dotnet\Timberyard\WebService\WebService.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\thacham\Documents\GitHub\SE-Project-Timberyard\WebService\WebService.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Users\thacham\Documents\GitHub\SE-Project-Timberyard\WebService\WebService.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
