--- a/ETL/appsettings.json
+++ b/ETL/appsettings.json
@@ -5,11 +5,11 @@
     "FaultLogsDirectory": ""
   },
   "DatabaseSettings": {
-    "ConnectionString": "persistsecurityinfo=True;database=Timberyard;SslMode=none",
-    "DbServer": "",
-    "DbPassword": "",
-    "DbUsername": ""
-  },
+    "ConnectionString": "Initial Catalog=Timberyard;",
+    "DbServer": "LOCALHOST",
+    "DbPassword": "etl_process",
+    "DbUsername": "etl_process"
+},
   "UserCredentials": {
     "Email": "",
     "Password": ""
