--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -19,7 +19,7 @@
     "SMPTClientSettings": {
         "Host": "localhost",
         "Port": 25,
-        "SenderAddress": "Timberyard@ribbon.com"
+        "SenderAddress": "Timberyard@rbbn.com"
     },
     "DefaultSystemAdmin": {
         "Email": "admin@timberyard.rbbn.com",
