clean code and update appSettings

--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -8,7 +8,7 @@
     },
     "DatabaseSettings": {
         "ConnectionString": "Initial Catalog=Timberyard;",
-        "DbServer": "LOCALHOST\\SQLEXPRESS",
+        "DbServer": "LOCALHOST",
         "DbPassword": "timberyard_service",
         "DbUsername": "timberyard_service"
     },
@@ -19,7 +19,7 @@
   "SMPTClientSettings": {
     "Host": "mailhost.ecitele.com",
     "Port": 25,
-    "SenderAddress": "Timberyard@rbbn.com"
+    "SenderAddress": "Timberyard system"
   },
     "DefaultSystemAdmin": {
         "Email": "admin@timberyard.rbbn.com",
