fix sender address

--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -19,7 +19,7 @@
   "SMPTClientSettings": {
     "Host": "mailhost.ecitele.com",
     "Port": 25,
-    "SenderAddress": "Timberyard system"
+    "SenderAddress": "Timberyard@rbbn.com"
   },
     "DefaultSystemAdmin": {
         "Email": "admin@timberyard.rbbn.com",
