--- a/AcceptanceTests/appsettings.json
+++ b/AcceptanceTests/appsettings.json
@@ -14,7 +14,7 @@
     "Url": "https://timberyard-api.sonusnet.com:5001/"
   },
   "DatabaseSettings": {
-    "ConnectionString": "Initial Catalog=Timberyard",
+    "ConnectionString": "Initial Catalog=Timberyard-Testing",
     "DbServer": "ilpt-atebisql01",
     "DbPassword": "timberyard_service",
     "DbUsername": "timberyard_service"
